Fix spacing in activity page for mobile

--- a/src/Styles/App.scss
+++ b/src/Styles/App.scss
@@ -261,4 +261,7 @@ html {
   #burger-menu-button span::before {
     font-size:1.75em;
   }
+  #footer{
+    margin-bottom:30px;
+  }
 }
